more clean up - code clean